# wav-file-practice

./: CMakeLists.txt  README.md
exceptions/: soundEffectsException.h
include/: fileReader.h  modes.h  soundEffects.h  wavHeader.h
src/: fileReader.cpp  main.cpp  modes.cpp  soundEffects.cpp  wavHeader.cpp
